// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inscrit des joueurs 1`] = `
Object {
  "joueurs": Array [
    "J1",
  ],
}
`;

exports[`inscrit des joueurs 2`] = `
Object {
  "joueurs": Array [
    "J1",
    "J2",
  ],
}
`;

exports[`inscrit un joueur 1`] = `
Object {
  "joueurs": Array [
    "J1",
  ],
}
`;

exports[`inscrit un joueur 2`] = `
Object {
  "joueurs": Array [
    "J1",
    "J2",
  ],
}
`;

exports[`retourne le state initial 1`] = `
Object {
  "joueurs": Array [],
  "lanceur": null,
  "phase": "INSCRIPTION",
}
`;
